--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -274,10 +274,10 @@ $heb-black-80: #342f2e;
 $iu-brand-color: #990000;
 $iu-accent-color: #eeedeb;
 
-$iu-accent-footer: #aca39a;
-
+$iu-accent-footer: #615546;
 $iu-accent-link: #990000;
 
+$iu-white: #FFFFFF;
 $iu-black: #191919;
 $iu-mahogany: #4a3c31;
 $iu-darklimestone: #83786f;
@@ -469,7 +469,7 @@ $iu-midnight: #006298;
     a,
     a:hover,
     a:active {
-      color: $iu-accent-color;
+      color: $iu-white;
     }
     .press-block-a,
     .press-block-b {
@@ -483,7 +483,7 @@ $iu-midnight: #006298;
       a,
       a:hover,
       a:active {
-        color: $iu-brand-color;
+        color: $iu-white;
       }
 
     }
@@ -491,7 +491,7 @@ $iu-midnight: #006298;
       background-color: $iu-brand-color;
     }
     .platform {
-      background-color: $iu-darklimestone;
+      background-color: $iu-mahogany;
     }
   }
 
